# agentskills-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: DEVELOPMENT.md  SKILLS-DIRECTORY.md
examples/: README.md  server-fs.json  server-http.json
examples/agent-framework/fs/: local_context_provider.py  local_tools.py  mcp_context_provider.py  mcp_tools.py
examples/agent-framework/http/: local_context_provider.py  local_tools.py  mcp_context_provider.py  mcp_tools.py
examples/langchain/fs/: local_tools.py  mcp_tools.py
examples/langchain/http/: local_tools.py  mcp_tools.py
examples/skills/incident-response/: SKILL.md
examples/skills/incident-response/assets/: escalation-flowchart.mermaid
examples/skills/incident-response/references/: escalation-policy.md  postmortem-template.md  severity-levels.md
examples/skills/incident-response/scripts/: create-incident-channel.sh  page-oncall.sh
scripts/: bump-version.ps1  bump-version.sh  dev.py  publish.ps1  publish.sh
